# Library-System

./: .gitignore  Admin.cpp  Admin.hpp  Admin_Test.hpp  Book.cpp  Book.h  Book.hpp  Book_Test.hpp  CMakeLists.txt  Library.cpp  Library.h  Library.hpp  Library_Test.hpp  Lists.hpp  Lists_Test.hpp  README.md  Standard.cpp  Standard.hpp  Standard_Test.hpp  Strategy.hpp  Strategy_Test.hpp  Unit_Test.cpp  User.cpp  User.hpp  User_Test.hpp  booklists.csv  booklists.json  login.csv  main.cpp  run
UserFiles/: joseph.txt  raymond.txt
include/: Admin.h  Book.h  Composition.h  Db.h  Individual.h  Library.h  Lists.h  Standard.h  Strategy.h  User.h
src/: Admin.cpp  Book.cpp  Composition.cpp  Db.cpp  Individual.cpp  Library.cpp  Standard.cpp  Strategy.cpp  User.cpp  main.cpp
tests/: Admin_Test.hpp  Book_Test.hpp  Library_Test.hpp  Lists_Test.hpp  Standard_Test.hpp  Strategy_Test.hpp  User_Test.hpp
